--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,15 +1,14 @@
 .homePage {
   position: relative;
   display: grid;
-  grid-template-columns: 20rem auto 20rem;
+  width: 80%;
+  margin: auto;
+  grid-template-columns: 20rem auto;
   padding-top: 4.5rem;
 }
 @media screen and (max-width: 1150px) {
   .homePage {
     grid-template-columns: 20rem auto;
-  }
-  .rightSide {
-    display: none;
   }
 }
 @media screen and (max-width: 1000px) {
