--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,8 +1,8 @@
-.logo img {
-  width: 22px;
+.logo {
+  display: none;
 }
 .logo2 img {
-  width: 120px;
+  width: 170px;
 }
 .container {
   width: 100%;
@@ -13,7 +13,6 @@
   background-color: white;
   box-shadow: rgba(100, 100, 111, 0.09) 0px 7px 20px 0px;
 }
-
 .container > div {
   display: flex;
   justify-content: space-between;
@@ -39,7 +38,7 @@
   flex: 0 0 20%;
 }
 .item-center {
-  flex: 0 0 10%;
+  flex: 0 0 15%;
 }
 .item-center ul li {
   padding: 0;
@@ -53,7 +52,7 @@
   padding: 1.7rem 0;
 }
 .item-right {
-  flex: 0 0 65%;
+  flex: 0 0 60%;
   display: flex;
   gap: 20px;
 }
@@ -192,10 +191,10 @@ li a {
 
 @media (max-width: 1230px) {
   .item-center {
-    flex: 0 0 10%;
+    flex: 0 0 0%;
   }
   .item-right {
-    flex: 0 0 30%;
+    flex: 0 0 50%;
   }
   .navSearch {
     display: none;
@@ -213,12 +212,14 @@ li a {
   .logo img {
     width: 40px;
   }
-  .hamburger {
-    display: flex;
-    width: 40px;
-    justify-content: center;
-    align-items: center;
+  .container > div > div:nth-child(3) {
+    justify-content: flex-end;
   }
+  .item-right {
+    flex: 0 0 50%;
+    margin-right: 2rem;
+  }
+
   .hide {
     background-color: white;
   }
@@ -249,24 +250,8 @@ li a {
   .menu > ul {
     flex-direction: column;
   }
-  .menu > ul > li {
-    width: 100%;
-    line-height: 1;
-    margin: 0;
-    display: block;
-    flex-direction: column;
-    border-bottom: 1px solid rgb(219, 218, 218);
-    padding: 0 30px;
-  }
-  .menu > ul > li > a {
-    line-height: 60px;
-    height: 30px;
-    color: black;
-    font-weight: 700;
-    width: 100%;
-  }
   .menu > ul > p {
-    width: 100%;
+    width: 80%;
     line-height: 1;
     margin: 0;
     display: flex;
@@ -316,6 +301,15 @@ li a {
   }
 }
 @media (max-width: 520px) {
+  .hamburger {
+    display: flex;
+    width: 40px;
+    justify-content: center;
+    align-items: center;
+  }
+  .hideAt {
+    display: none;
+  }
   .container {
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 20px 0px;
   }
@@ -347,6 +341,17 @@ li a {
     line-height: 50px;
     height: 25px;
     font-weight: 600;
+  }
+}
+@media (max-width: 420px) {
+  .logo {
+    display: block;
+  }
+  .logo img{
+    width: 40px;
+  }
+  .logo2 {
+    display: none;
   }
 }
 @media (max-width: 320px) {
