--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -21,3 +21,18 @@
     display: none;
   }
 }
+@media screen and (max-width: 920px) {
+  .homePage {
+    padding-top: 3.5rem;
+  }
+}
+@media screen and (max-width: 520px) {
+  .homePage {
+    padding-top: 3.2rem;
+  }
+}
+@media screen and (max-width: 321px) {
+  .homePage {
+    padding-top: 2.5rem;
+  }
+}
