--- a/src/Pages/Profile/Profile.css
+++ b/src/Pages/Profile/Profile.css
@@ -47,7 +47,7 @@
 
 @media screen and (max-width: 920px) {
   .profilePage {
-    padding-top: 3.7rem;
+    padding-top: 4.5rem;
   }
 }
 @media screen and (max-width: 600px) {
@@ -57,7 +57,12 @@
 }
 @media screen and (max-width: 520px) {
   .profilePage {
-    padding-top: 3.9rem;
+    padding-top: 4.3rem;
+  }
+}
+@media screen and (max-width: 420px) {
+  .profilePage {
+    padding-top: 4rem;
   }
 }
 @media screen and (max-width: 321px) {
