--- a/src/Pages/Login/Login.css
+++ b/src/Pages/Login/Login.css
@@ -14,12 +14,17 @@
 }
 .loginImage {
   width: 45%;
+  margin: auto;
+  text-align: center;
+}
+.loginImage h1 {
+  color: rgb(11, 82, 152);
 }
 .loginImage img {
-  width: 100%;
+  width: 80%;
 }
 .loginDetail {
-  padding: 2rem 4rem;
+  padding: 1rem;
   width: 50%;
   /* height: 300px; */
 }
@@ -33,7 +38,7 @@ span {
   color: rgb(57, 57, 57);
 }
 .loginDetail > div:nth-child(2) input {
-  width: 90%;
+  width: 95%;
   padding: 10px;
   margin: 1rem 0;
   font-size: 15px;
