--- a/src/Pages/Profile/ProfileInfo.css
+++ b/src/Pages/Profile/ProfileInfo.css
@@ -21,3 +21,23 @@
   align-items: center;
   gap: 0.5rem;
 }
+.inputForm input,
+select {
+  width: 100%;
+  padding: 10px;
+  margin: 0.7rem auto;
+  font-size: 15px;
+  letter-spacing: 1px;
+  outline: none;
+  border: 1px solid rgb(187, 187, 187);
+  color: gray;
+  box-sizing: border-box;
+}
+.accountDrawer p {
+  padding: 15px 10px;
+  font-size: 17px;
+  font-weight: bold;
+  color: rgb(11, 82, 152);
+  border-bottom: 1px solid rgb(220, 220, 220);
+  cursor: pointer;
+}
