--- a/src/Components/PostSide/Post.css
+++ b/src/Components/PostSide/Post.css
@@ -6,6 +6,11 @@
   height: 30rem;
   object-fit: contain;
 }
+.postDetails {
+  display: flex;
+  gap: 8px;
+  margin: 5px 0;
+}
 
 .postsBox {
   display: flex;
@@ -16,7 +21,7 @@
   display: flex;
   flex-direction: column;
   background-color: var(--cardColor);
-  padding: 1rem;
+  padding: 1.5rem;
   border-radius: 1rem;
   gap: 0.8rem;
 }
@@ -31,8 +36,15 @@
   align-items: flex-start;
   gap: 1rem;
 }
-.postReact > svg {
-  font-size: 1.5rem;
+.postReact > div {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  margin: 5px 0;
+  color: rgb(11, 82, 152);
+}
+.postReact > div > svg {
+  font-size: 1.2rem;
   color: rgb(11, 82, 152);
   cursor: pointer;
 }
