--- a/src/Components/UserProfile/UserProfile.css
+++ b/src/Components/UserProfile/UserProfile.css
@@ -32,6 +32,16 @@
   box-shadow: var(--profileShadow);
   cursor: pointer;
 }
+.userProfileName {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 3rem;
+  gap: 10px;
+}
+.userProfileName > span:nth-child(1) {
+  font-weight: bold;
+}
 .profilePic {
   font-weight: bold;
   text-align: center;
