--- a/src/Components/PostSide/Post.css
+++ b/src/Components/PostSide/Post.css
@@ -11,7 +11,6 @@
   gap: 8px;
   margin: 5px 0;
 }
-
 .postsBox {
   display: flex;
   flex-direction: column;
@@ -53,4 +52,9 @@
 }
 .postDetails b {
   cursor: pointer;
+}
+@media (max-width: 800px) {
+  .post {
+    padding: 1rem;
+  }
 }
