--- a/src/Components/PostSide/Post.css
+++ b/src/Components/PostSide/Post.css
@@ -23,6 +23,22 @@
   padding: 1.5rem;
   border-radius: 1rem;
   gap: 0.8rem;
+  position: relative;
+}
+.postEdit {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  gap: 5px;
+  right: 20px;
+  top: 20px;
+  background-color: rgba(201, 201, 201, 0.479);
+  padding: 3px 10px;
+  border-radius: 5px;
+  font-weight: 600;
+  font-size: 20px;
+  cursor: pointer;
+  color: rgb(11, 82, 152);
 }
 .post > img {
   width: 100%;
