--- a/src/Components/PostSide/Comment.css
+++ b/src/Components/PostSide/Comment.css
@@ -61,3 +61,16 @@
   font-weight: 400;
   color: rgb(70, 70, 70);
 }
+.commentEdit {
+  width: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+  padding: 3px 0px;
+  border-radius: 5px;
+  font-weight: 600;
+  font-size: 20px;
+  cursor: pointer;
+  color: rgb(11, 82, 152);
+}
