--- a/src/Components/PostSide/Post.css
+++ b/src/Components/PostSide/Post.css
@@ -42,7 +42,7 @@
 }
 .post > img {
   width: 100%;
-  max-height: 24rem;
+  /* max-height: 24rem; */
   object-fit: contain;
   border-radius: 0.5rem;
 }
