--- a/src/Pages/Profile/ProfileInfo.css
+++ b/src/Pages/Profile/ProfileInfo.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   gap: 1.3rem;
+  background-color: var(--cardColor);
   border-radius: 1rem;
   padding: 15px;
 }
